--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+  <base href="/">
   <title>Snakes</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="libs/bootstrap.css">
