work with map API

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <base href="/">
-  <title>Snakes</title>
+  <title>KPI Event</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="libs/bootstrap.css">
   <link rel="stylesheet" href="libs/bootstrap-theme.css">
